--- a/small_n_stats_WPF/small_n_stats_WPF/Views/BatchDemandCurveWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/BatchDemandCurveWindow.xaml
@@ -1,19 +1,3 @@
-﻿<!-- 
-    Copyright 2016 Shawn Gilroy
-    This file is part of Demand Analysis.
-    Demand Analysis is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, version 2.
-    
-    Demand Analysis is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-    
-    You should have received a copy of the GNU General Public License
-    along with Demand Analysis.  If not, see <http://www.gnu.org/licenses/gpl-2.0.html>.
-﻿-->
-﻿
 ﻿<Window x:Class="small_n_stats_WPF.Views.BatchDemandCurveWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -37,7 +21,6 @@
         <i:EventTrigger EventName="Loaded">
             <i:InvokeCommandAction Command="{Binding ViewLoadedCommand}"/>
         </i:EventTrigger>
-        
         <i:EventTrigger EventName="Closing">
             <i:InvokeCommandAction Command="{Binding ViewClosingCommand}"/>
         </i:EventTrigger>
@@ -96,7 +79,7 @@
                 <ColumnDefinition Width="100"></ColumnDefinition>
                 <ColumnDefinition Width="100"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            
+
             <TextBlock
                 x:Name="windowTitle"
                 Grid.Row="0"
@@ -115,19 +98,20 @@
                     Command="{Binding GetXRangeCommand}">
             </Button>
 
-            <TextBox Name="xRange"
-                     Grid.Row="1" 
-                     Grid.Column="1"
-                     Grid.ColumnSpan="3"
-                     IsReadOnly="True"
-                     Margin="10"
-                     VerticalContentAlignment="Center"
-                     Text="{Binding XRangeValues}"
-                     Background="{Binding Path=XBrush}">
-                     <TextBox.ContextMenu>
-                         <ContextMenu>
-                             <MenuItem Header="Manually Type Range" Command="{Binding PricingRangeCommand}" />
-                         </ContextMenu>
+            <TextBox
+                Name="xRange"
+                Grid.Row="1" 
+                Grid.Column="1"
+                Grid.ColumnSpan="3"
+                IsReadOnly="True"
+                Margin="10"
+                VerticalContentAlignment="Center"
+                Text="{Binding XRangeValues}"
+                Background="{Binding Path=XBrush}">
+                <TextBox.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Manually Type Range" Command="{Binding PricingRangeCommand}" />
+                    </ContextMenu>
                 </TextBox.ContextMenu>
             </TextBox>
 
@@ -138,68 +122,77 @@
                     Command="{Binding GetYRangeCommand}">
             </Button>
 
-            <TextBox Name="yRange"
-                     Grid.Row="2" 
-                     Grid.Column="1"
-                     Grid.ColumnSpan="3"
-                     IsReadOnly="True"
-                     Margin="10"
-                     VerticalContentAlignment="Center"
-                     Text="{Binding YRangeValues}"
-                     Background="{Binding Path=YBrush}">
-                     <TextBox.ContextMenu>
-                        <ContextMenu>
-                             <MenuItem Header="Manually Type Range" Command="{Binding ConsumptionRangeCommand}" />
-                        </ContextMenu>
+            <TextBox
+                Name="yRange"
+                Grid.Row="2" 
+                Grid.Column="1"
+                Grid.ColumnSpan="3"
+                IsReadOnly="True"
+                Margin="10"
+                VerticalContentAlignment="Center"
+                Text="{Binding YRangeValues}"
+                Background="{Binding Path=YBrush}">
+                <TextBox.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Manually Type Range" Command="{Binding ConsumptionRangeCommand}" />
+                    </ContextMenu>
                 </TextBox.ContextMenu>
             </TextBox>
           
-            <Label Grid.Row="3"
-                   Grid.Column="0"
-                   Content="Mode"
-                   HorizontalContentAlignment="Center"
-                   VerticalContentAlignment="Center">
+            <!-- Check Box Controls Left -->
+
+            <Label
+                Grid.Row="3"
+                Grid.Column="0"
+                Content="Mode"
+                HorizontalContentAlignment="Center"
+                VerticalContentAlignment="Center">
             </Label>
             
-            <ComboBox Grid.Row="3"
-                      Grid.Column="1"
-                      Margin="5"
-                      Padding="10,0,0,0"
-                      HorizontalContentAlignment="Left"
-                      VerticalContentAlignment="Center"
-                      SelectedValuePath="Content"
-                      SelectedValue="{Binding SelectedMode}"
-                      IsSynchronizedWithCurrentItem="True">
-                          <ComboBoxItem IsSelected="True">Individual</ComboBoxItem>
-                          <ComboBoxItem>Group</ComboBoxItem>
+            <ComboBox 
+                Grid.Row="3"
+                Grid.Column="1"
+                Margin="5"
+                Padding="10,0,0,0"
+                HorizontalContentAlignment="Left"
+                VerticalContentAlignment="Center"
+                SelectedValuePath="Content"
+                SelectedValue="{Binding SelectedMode}"
+                IsSynchronizedWithCurrentItem="True">
+                <ComboBoxItem IsSelected="True">Individual</ComboBoxItem>
+                <ComboBoxItem>Group</ComboBoxItem>
             </ComboBox>
             
-            <StackPanel Orientation="Horizontal"
-                        Grid.Row="3"
-                        Grid.Column="2"
-                        Grid.ColumnSpan="2"
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Right"
-                        Margin="0,0,25,0">
-                            <Label Content="Advanced Settings?"/>
-                                <CheckBox Grid.Row="4"
-                                          Grid.Column="2"
-                                          Grid.ColumnSpan="2"
-                                          Margin="5,0,0,0"
-                                          VerticalAlignment="Center"
-                                          HorizontalAlignment="Left"
-                                          Style="{DynamicResource unlockingKey}"
-                                          Content="">
+            <StackPanel
+            Orientation="Horizontal"
+            Grid.Row="3"
+            Grid.Column="2"
+            Grid.ColumnSpan="2"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Right"
+            Margin="0,0,25,0">
+                <Label Content="Advanced Settings?"/>
+                <CheckBox
+                    Grid.Row="4"
+                    Grid.Column="2"
+                    Grid.ColumnSpan="2"
+                    Margin="5,0,0,0"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Left"
+                    Style="{DynamicResource unlockingKey}"
+                    Content="">
 
-                            <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="Checked">
-                                    <i:InvokeCommandAction Command="{Binding Path=AdvancedSettings}"/>
-                                </i:EventTrigger>
-                                
-                                <i:EventTrigger EventName="Unchecked">
-                                    <i:InvokeCommandAction Command="{Binding Path=AdvancedSettings}"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>
+
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Checked">
+                            <i:InvokeCommandAction Command="{Binding Path=AdvancedSettings}"/>
+                        </i:EventTrigger>
+                        <i:EventTrigger EventName="Unchecked">
+                            <i:InvokeCommandAction Command="{Binding Path=AdvancedSettings}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+
+
                 </CheckBox>
             </StackPanel>
 
@@ -210,38 +203,31 @@
                 Grid.RowSpan="3"
                 IsSelectionEnabled="False"
                 VerticalScrollBarVisibility="Hidden">
-                    <FlowDocument>
-                        <FlowDocument.Resources>
-                            <Style TargetType="{x:Type Paragraph}">
-                                <Setter Property="Margin" Value="0"/>
-                                <Setter Property="Padding" Value="0"/>
-                            </Style>
-                        </FlowDocument.Resources>
-                        
-                        <Paragraph FontSize="12" FontFamily="Segoe UI">
-                            <Bold>Directions:</Bold>
-                        </Paragraph>
-                        
-                        <Paragraph FontSize="12" 
-                                   FontFamily="Segoe UI" 
-                                   Padding="0,5,0,0">
-                                        The fitting of demand curves requires that users select a range of 
-                                        Pricing Values (one row) that correspond with a range of 
-                                        Consumption Values (many rows).  Small n Stats can calculate
-                                        both the Exponential Demand Function (Hursh &amp; Silverburg, 2008) 
-                                        as well as the Exponentiated Demand Function (Koffarnus, Franck, Stein
-                                        &amp; Bickel, 2015).
-                        </Paragraph>
-                        
-                        <Paragraph FontSize="12" 
-                                   FontFamily="Segoe UI" 
-                                   Padding="0,5,0,0">
-                                        By default, k values are derived from each prior to each analysis unless
-                                        otherwise specified. For exponential modeling, zero pricing points are 
-                                        adjusted from 0.0 to 0.01 by default and zero consumption values are 
-                                        dropped entirely.
-                        </Paragraph>
-                    </FlowDocument>
+                <FlowDocument>
+                    <FlowDocument.Resources>
+                        <Style TargetType="{x:Type Paragraph}">
+                            <Setter Property="Margin" Value="0"/>
+                            <Setter Property="Padding" Value="0"/>
+                        </Style>
+                    </FlowDocument.Resources>
+                    <Paragraph FontSize="12" FontFamily="Segoe UI">
+                        <Bold>Directions:</Bold>
+                    </Paragraph>
+                    <Paragraph FontSize="12" FontFamily="Segoe UI" Padding="0,5,0,0">
+                        The fitting of demand curves requires that users select a range of 
+                        Pricing Values (one row) that correspond with a range of 
+                        Consumption Values (many rows).  Small n Stats can calculate
+                        both the Exponential Demand Function (Hursh &amp; Silverburg, 2008) 
+                        as well as the Exponentiated Demand Function (Koffarnus, Franck, Stein
+                        &amp; Bickel, 2015).
+                    </Paragraph>
+                    <Paragraph FontSize="12" FontFamily="Segoe UI" Padding="0,5,0,0">
+                        By default, k values are derived from each prior to each analysis unless
+                        otherwise specified. For exponential modeling, zero pricing points are 
+                        adjusted from 0.0 to 0.01 by default and zero consumption values are 
+                        dropped entirely.
+                    </Paragraph>
+                </FlowDocument>
             </FlowDocumentScrollViewer>
 
             <Button Name="calculateButton" 
@@ -268,7 +254,6 @@
                             <Setter Property="Visibility" 
                                     Value="Collapsed"/>
                         </DataTrigger>
-                        
                         <DataTrigger Binding="{Binding AdvancedMenu}" 
                                      Value="True">
                             <Setter Property="Visibility" 
@@ -315,21 +300,21 @@
                     Command="{Binding GetKRangeCommand}">
             </Button>
 
-            <TextBox Name="kRange"
-                     Grid.Row="1" 
-                     Grid.Column="1"
-                     Grid.ColumnSpan="3"
-                     IsReadOnly="True"
-                     Margin="10"
-                     VerticalContentAlignment="Center"
-                     Text="{Binding KRangeValues}"
-                     Background="{Binding Path=KBrush}">
-                     <TextBox.ContextMenu>
-                          <ContextMenu>
-                               <MenuItem Header="Manually Type Range" 
-                                         Command="{Binding ConstantRangeCommand}" />
-                          </ContextMenu>
-                     </TextBox.ContextMenu>
+            <TextBox
+                Name="kRange"
+                Grid.Row="1" 
+                Grid.Column="1"
+                Grid.ColumnSpan="3"
+                IsReadOnly="True"
+                Margin="10"
+                VerticalContentAlignment="Center"
+                Text="{Binding KRangeValues}"
+                Background="{Binding Path=KBrush}">
+                <TextBox.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Manually Type Range" Command="{Binding ConstantRangeCommand}" />
+                    </ContextMenu>
+                </TextBox.ContextMenu>
             </TextBox>
 
             <FlowDocumentScrollViewer Grid.Column="0"
@@ -348,17 +333,15 @@
                                     Value="0"/>
                         </Style>
                     </FlowDocument.Resources>
-                    
-                    <Paragraph FontSize="12" 
-                               FontFamily="Segoe UI">
+                    <Paragraph FontSize="12" FontFamily="Segoe UI">
                         <Bold>Individualize k values:</Bold>
                     </Paragraph>
-                    
-                    <Paragraph FontSize="12" 
-                               FontFamily="Segoe UI" 
-                               Padding="0,5,0,0">
-                               Small n Stats can calculate can incorporate individual k values for each analysis.  This
-                               is an alternative to selecting a single k value for all comparisons.
+                    <Paragraph 
+                        FontSize="12" 
+                        FontFamily="Segoe UI" 
+                        Padding="0,5,0,0">
+                        Small n Stats can calculate can incorporate individual k values for each analysis.  This
+                        is an alternative to selecting a single k value for all comparisons.
                     </Paragraph>
                 </FlowDocument>
             </FlowDocumentScrollViewer>
@@ -379,34 +362,34 @@
                                     Value="0"/>
                         </Style>
                     </FlowDocument.Resources>
-                    
-                    <Paragraph FontSize="12" 
-                               FontFamily="Segoe UI">
+                    <Paragraph FontSize="12" FontFamily="Segoe UI">
                         <Bold>Alternative Demand Curve Models:</Bold>
                     </Paragraph>
-                    
-                    <Paragraph FontSize="12" 
-                               FontFamily="Segoe UI" 
-                               Padding="0,5,0,0">
-                               Small n Stats can calculate is capable of fitting both the Exponential 
-                               Demand Function (Hursh &amp; Silverburg, 2008) and Exponentiated Demand 
-                               Function (Koffarnus, Franck, Stein &amp; Bickel, 2015).  
-                               You may select either below.
+                    <Paragraph 
+                        FontSize="12" 
+                        FontFamily="Segoe UI" 
+                        Padding="0,5,0,0">
+                        Small n Stats can calculate is capable of fitting both the Exponential 
+                        Demand Function (Hursh &amp; Silverburg, 2008) and Exponentiated Demand 
+                        Function (Koffarnus, Franck, Stein &amp; Bickel, 2015).  
+                        You may select either below.
                     </Paragraph>
 
-                    <Paragraph FontSize="12" 
-                               FontFamily="Segoe UI" 
-                               Padding="0,5,0,0">
-                               Output metrics for each individual model will be equivalent, though
-                               careful consideration is warranted given the specific nature of your
-                               research question and design.
+                    <Paragraph 
+                        FontSize="12" 
+                        FontFamily="Segoe UI" 
+                        Padding="0,5,0,0">
+                        Output metrics for each individual model will be equivalent, though
+                        careful consideration is warranted given the specific nature of your
+                        research question and design.
                     </Paragraph>
 
-                    <Paragraph FontSize="12" 
-                               FontFamily="Segoe UI" 
-                               Padding="0,5,0,0">
-                               For a more in-depth review of these differences, please review the work
-                               from Koffarnus et. al., 2015.
+                    <Paragraph 
+                        FontSize="12" 
+                        FontFamily="Segoe UI" 
+                        Padding="0,5,0,0">
+                        For a more in-depth review of these differences, please review the work
+                        from Koffarnus et. al., 2015.
                     </Paragraph>
                 </FlowDocument>
             </FlowDocumentScrollViewer>
