--- a/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
@@ -227,10 +227,8 @@
                          Width="3000">
                 <RichTextBox.Resources>
                     <Style TargetType="{x:Type Paragraph}">
-                        <Setter Property="Margin" 
-                                Value="0"/>
-                        <Setter Property="Padding" 
-                                Value="0"/>
+                        <Setter Property="Margin" Value="0"/>
+                        <Setter Property="Padding" Value="0"/>
                     </Style>
                 </RichTextBox.Resources>
             </RichTextBox>
