--- a/small_n_stats_WPF/small_n_stats_WPF/Views/IntroWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/IntroWindow.xaml
@@ -25,7 +25,7 @@
         mc:Ignorable="d"
         Title="Introduction Window" 
         ResizeMode="NoResize"
-        Height="625" 
+        Height="700" 
         Width="450"
         Loaded="Window_Loaded">
     <Grid>
@@ -40,11 +40,11 @@
                 </Paragraph>
                 <Paragraph>
                     The
-                    <Bold>Demand Analysis Demand Calculator</Bold>
+                    <Bold>Demand Calculator</Bold>
                     is a tool designed to aid in the calculation and quantification
-                    of demand contexts.  Many components of Demand Analysis 
-                    are themselves available as individual scripts runnable in R alone 
-                    and the <Bold>Demand Analysis Demand Calculator</Bold> serves as an easy 
+                    of demand.  Many components of Demand Analysis 
+                    are available as individual scripts runnable in R alone 
+                    and the <Bold>Demand Calculator</Bold> serves as an easy 
                     bridge for accessing these select methods in a familiar, 
                     spreadsheet-based interface.
                 </Paragraph>
@@ -53,24 +53,55 @@
                     the following:
                 </Paragraph>
                 <List>
-                    <ListItem>
+                    <ListItem x:Name="checkNet" TextBlock.Foreground="Red">
                         <Paragraph>
                             Microsoft .NET Framework (at least 4.0)
                         </Paragraph>
                     </ListItem>
-                    <ListItem>
+                    <ListItem x:Name="checkR" TextBlock.Foreground="Red">
                         <Paragraph>
                             The
-                            <Hyperlink NavigateUri="https://www.r-project.org/"
+                            <Hyperlink x:Name="checkR2"
+                                       NavigateUri="https://www.r-project.org/"
+                                       TextBlock.Foreground="Red"
                                        RequestNavigate="Hyperlink_RequestNavigate">R Statistical Package</Hyperlink>
                         </Paragraph>
                     </ListItem>
-                    <ListItem>
+                    <ListItem x:Name="checkGgplot" TextBlock.Foreground="Red">
                         <Paragraph>
-                            Initial internet access (to make sure several R packages are installed/updated).
+                            ggplot2 (R package)
+                        </Paragraph>
+                    </ListItem>
+                    <ListItem x:Name="checkNlmrt" TextBlock.Foreground="Red">
+                        <Paragraph>
+                            nlmrt (R package)
+                        </Paragraph>
+                    </ListItem>
+                    <ListItem x:Name="checkNlstools" TextBlock.Foreground="Red">
+                        <Paragraph>
+                            nlstools (R package)
+                        </Paragraph>
+                    </ListItem>
+                    <ListItem x:Name="checkReshape2" TextBlock.Foreground="Red">
+                        <Paragraph>
+                            reshape2 (R package)
+                        </Paragraph>
+                    </ListItem>
+                    <ListItem x:Name="checkGridExtra" TextBlock.Foreground="Red">
+                        <Paragraph>
+                            gridExtra (R package)
+                        </Paragraph>
+                    </ListItem>
+                    <ListItem x:Name="checkBase64enc" TextBlock.Foreground="Red">
+                        <Paragraph>
+                            base64enc (R package)
                         </Paragraph>
                     </ListItem>
                 </List>
+                <Paragraph>
+                    <Run Text="Status:" />
+                    <Run x:Name="loadText"  Text="Loading R" TextBlock.Foreground="Red" />
+                </Paragraph>
                 <Paragraph>
                     This is an open-sourced project and all source material (including R scripts for direct use) 
                     are available in the application install directory.
