--- a/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveUnifiedWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveUnifiedWindow.xaml
@@ -9,7 +9,7 @@
         Loaded="Window_Loaded"
         Closing="Window_Closing"
         WindowStartupLocation="CenterOwner"
-        Title="Demand Curve Unified Window" 
+        Title="Demand Curve Fitting" 
         ResizeMode="NoResize"
         Height="525"
         Width="415">
